
=======================================================================================
Module - Protocol
* CHANGE (Eventum #221) - Added field validation to protocol code. Now a required field.


=======================================================================================
Module - Administration
* CHANGE (Eventum #16) - Expanded banks table to included additional fields.


=======================================================================================
Module - Clinical Annotation
* Updated audit fields for treatment tables to DATETIME format.
* Added help text to Diagnosis fields.


=======================================================================================
Module - Inventory
* CHANGE (Eventum #476) - Correct bug to allow user to delete storage information of 
a used aliquot.


=======================================================================================
Module - Query Tool
* BUG (Eventum #472) - Corrected a bug where the unfilled values were not replaced with NULL
* BUG (Eventum #475) - Fixed a bug with the query tool where subqueries were not working.


=======================================================================================
Module - ALL
* Change some db fields sizes
*    `collections`.`reception_by`
*    `collections`.`collection_property`
*    `derivative_details`.`creation_by`
*    `diagnoses`.`dx_number`
*    `orders`.`order_number`
*    `participant_messages`.`due_date`
*    `protocol_masters`.`name`
*    `storage_masters`.`short_label`


=======================================================================================
Module - ALL
* Drop db tables duplicated key 
* Add FK
* ADD tables type and collation to innodb and latin


=======================================================================================
Module - Inventory
* ENHANCEMENT (Eventum #487) - Update aliquot_controls.aliquot_type to be consistant with the rest 
of the tables content.